syntax = "proto3";

package post.v1;

import "google/protobuf/timestamp.proto";

service PostService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message CreateRequest {
  string title = 1;
  string content = 2;
  string author = 3;
  google.protobuf.Timestamp published_on = 4;
  repeated string tags = 5;
}

message CreateResponse {
  bool success =1;
  string id = 2;
  string title = 3;
  string content = 4;
  string author = 5;
  google.protobuf.Timestamp published_on = 6;
  repeated string tags = 7;
  string message  = 8;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  bool success =1;
  string id = 2;
  string title = 3;
  string content = 4;
  string author = 5;
  google.protobuf.Timestamp published_on = 6;
  repeated string tags = 7;
  string message  = 8;
}

message UpdateRequest {
  string id = 1;
  optional string title = 2;
  optional string content = 3;
  optional string author = 4;
  repeated string tags = 5;
}

message UpdateResponse {
  bool success =1;
  string id = 2;
  string title = 3;
  string content = 4;
  string author = 5;
  google.protobuf.Timestamp published_on = 6;
  repeated string tags = 7;
  string message  = 8;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  bool success =1;
  string message = 2;
}